# hwmonitor

./: Cargo.toml  README.md
src/: main.rs
src/system/: affinity.rs  ioctl.rs  kernal_driver.rs  mod.rs  system.rs
src/system/cpu/: core.rs  cpu.rs  mod.rs  thread.rs  topology.rs  vendor.rs
src/system/cpu/backend/: amd.rs  intel.rs  mod.rs  unknown.rs
src/system/cpu/core/: core.rs
src/system/cpu/core/backend/: amd.rs  intel.rs  mod.rs  unknown.rs
src/system/cpu/group_affinity/: group_affinity.rs  mod.rs  system.rs  thread.rs
