[package]
name = "hwmonitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
core_affinity = "0.8.3"
once_cell = "1.21.3"
raw-cpuid = "11.6.0"
tempfile = "3.23.0"
widestring = "1.2.0"
winapi = { version = "0.3.9", features = ["fileapi", "ioapiset", "winnt", "handleapi", "errhandlingapi", "std", "winbase", "winioctl"] }
windows = { version = "0.62.0", features = [
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_System_Services",
  "Win32_Storage_FileSystem",
  "Win32_System_Threading",
  "Win32_System_IO",
  "Win32_System_SystemInformation",
] }
windows-service = "0.8.0"
x86 = "0.52.0"
